	PR tree-optimization/44687 	* gcc.c-torture/compile/pr44687.c 	PR tree-optimization/44687 	* ipa-split.c (split_function): Use DECL_RESULT to store return value.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@161500 138bc75d-0d04-0410-961f-82ee72b054a4